[package]
name = "buyer-side-royalties-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "buyer_side_royalties_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = { version = "0.29.0", features = ["token", "metadata"]}
spl-transfer-hook-interface = "0.5.0"
spl-token-2022 = "1.0.0"